# mock-file-tree

./: .bumpversion.cfg  .cspell.json  .quickdocs.yml  .readthedocs.yml  Gruntfile.js  MANIFEST.in  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst
docs/sphinx/: conf.py
src/: __init__.py  file_tree.py  support.py
src/models/: exceptions.py  file_tree.py  mock_file_tree.py  unsupported.py
src/utils/: paths.py
test/: test_file_tree.py  test_mock_file_tree.py
tests/: test_file_tree.py  test_mock_file_tree.py
