[metadata]
name = mock_file_tree
version = 1.0.0

description = A simple interface to mock the os module with a virtual file tree.
url = https://github.com/joellefkowitz/mock-file-tree

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/joellefkowitz/mock-file-tree/issues
   CI            = https://github.com/joellefkowitz/mock-file-tree/actions
   Documentation = https://mock-file-tree.readthedocs.io/en/latest/
   Source Code   = https://github.com/joellefkowitz/mock-file-tree

keywords = 
    files
    mock
    testing

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    